[tool.poetry]
name = "sbfcam-loggingserver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sbfcam_loggingserver"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
bandit = "^1.7.4"
flake8 = "^6.0.0"
isort = "^5.10.1"
mypy = "^0.991"
ossaudit = "^0.5.0"

[tool.isort]
src_paths=["src"]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
